--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-dinky
+title: Global ecosystem typology
+description: This site is dedicated to open consultation and review of profiles for Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology.
 collections:
   Realms:
     output: true
