--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ defaults:
       layout: "realm"
   - scope:
       path: ""
-      type: "biomes"
+      type: "Biomes"
     values:
       layout: "biome"
   - scope:
