--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ collections:
 defaults:
   - scope:
       path: ""
-      type: "realms"
+      type: "Realms"
     values:
       layout: "realm"
   - scope:
