--- a/_data/navigation1.yml
+++ b/_data/navigation1.yml
@@ -1,4 +1,6 @@
-- name: Home
-  link: /Ecosystem-profiles-comments/
-- name: About
-  link: /Ecosystem-profiles-comments/about.html
+- name: Realms
+  link: /Ecosystem-profiles-comments/Realms.html
+- name: Biomes
+  link: /Ecosystem-profiles-comments/Biomes.html
+- name: Functional Groups
+  link: /Ecosystem-profiles-comments/EFGs.html
