added summary in the navigation list

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 - name: Home
   link: /Ecosystem-profiles-comments/
+- name: Summary
+  link: /Ecosystem-profiles-comments/Summary.html
 - name: About
   link: /Ecosystem-profiles-comments/about.html
