adding link to IUCN RLE website

--- a/_data/navigation2.yml
+++ b/_data/navigation2.yml
@@ -4,3 +4,5 @@
   link: /Ecosystem-profiles-comments/Glossary.html
 - name: References
   link: /Ecosystem-profiles-comments/General-references.html
+- name: About this site
+  link: /Ecosystem-profiles-comments/about.html
