fixed the link to the google form

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,15 @@
   link: /Ecosystem-profiles-comments/
 - name: Summary
   link: /Ecosystem-profiles-comments/Summary.html
+- name: Realms
+  link: /Ecosystem-profiles-comments/Realms.html
+- name: Biomes
+  link: /Ecosystem-profiles-comments/Biomes.html
+- name: Functional Groups
+  link: /Ecosystem-profiles-comments/EFGs.html
+- name: Realms
+  link: /Ecosystem-profiles-comments/Realms.html
+- name: Biomes
+  link: /Ecosystem-profiles-comments/Biomes.html
+- name: Functional Groups
+  link: /Ecosystem-profiles-comments/EFGs.html
