add navigation link for map summary

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,5 +14,7 @@
   link: /Ecosystem-profiles-comments/Glossary.html
 - name: References
   link: /Ecosystem-profiles-comments/General-references.html
+- name: Map info
+  link: /Ecosystem-profiles-comments/Map-summary.html
 - name: About this site
   link: /Ecosystem-profiles-comments/about.html
