--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,16 @@
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 theme: jekyll-theme-dinky
 title: "Global ecosystem typology"
-
+description: >- # this means to ignore newlines until "baseurl:"
+  Alternative site for the Global ecosystem typology with additional information for ecosystem profiles and indicative maps.
+baseurl: "/Ecosystem-profiles-comments" # the subpath of your site, e.g. /blog
+url: "https://jrfep.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jrfep
+github_username:  jrfep
 collections:
   Realms:
     output: true
@@ -8,7 +18,6 @@ collections:
     output: true
   EFGs:
     output: true
-
 defaults:
   - scope:
       path: ""
@@ -29,3 +38,23 @@ defaults:
       path: ""
     values:
       layout: "default"
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
