--- a/_data/efgrefs.yaml
+++ b/_data/efgrefs.yaml
@@ -90,6 +90,11 @@ M1.1:
 - Orth et al. 2006
 - Larkum et al. 2006
 - Van der Heide et al. 2012
+M1.10:
+- Moura et al. 2021
+- Pereira-Filho et al. 2015
+- "Riosmena-Rodr\xEDguez et al. 2017"
+- Fragkopoulou et al. 2021
 M1.2:
 - Bennett S, Wernberg T, Anderson RJ, Bolton JJ et al.  2015
 - Steneck et al. 2002
